# Series_Develop

./: .gitignore  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
alonememo/: app.py  pyproject.toml  requirements.txt
alonememo/.github/workflows/: ci.yml
alonememo/app/: __init__.py  config.py
alonememo/app/templates/: register.html
alonememo/app/views/: api.py
alonememo/templates/: callback.html  index.html  login.html
alonememo/tests/: conftest.py
alonememo/tests/views/: test_api.py  test_app.py  test_main.py  test_memo.py
alonemomo/: app.py  pyproject.toml
alonemomo/templates/: index.html
week01/: bootstrap.html  flex.html  main.css  quiz0.html  quiz1.html
week01/hw01/: index.html  main.css
week02/: ajax.html  main.js  main.test.js  package.json  quiz.html  메모.html
week02/hw02/: problem_bank_api_1.html  problem_bank_api_2.html  problem_bank_api_3.html  problem_bank_javascript_1.html  problem_bank_javascript_2.html  problem_bank_jquery_1.html  problem_bank_jquery_2.html  shopping_mall.html
week03/: book.py  memo.html  papago.py  request.py  scraping.py  secret.py
week03/hw03/: genie_music_crawler.py  selenium_genie_music_crawler.py  youtube_api.py
week04/: mongodb.py
week04/hw04/bookreview/: app.py  pyproject.toml
week04/hw04/bookreview/templates/: index.html
week04/hw04/my_favorite_movie_star/: app.py  init_db.py  pyproject.toml
week04/hw04/my_favorite_movie_star/templates/: index.html
