[tool.poetry]
name = "alonememo"
version = "0.1.0"
description = ""
authors = ["user <oreomasida@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.0"
pymongo = "^3.11.4"
requests = "^2.25.1"
bs4 = "^0.0.1"
PyJWT = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
